fix contrast and radius

--- a/src/style.css
+++ b/src/style.css
@@ -59,6 +59,10 @@ body {
   color: black;
 }
 
+.navbar-toggler:focus {
+  box-shadow: none;
+}
+
 footer p {
   margin: 0;
   line-height: 1.5;
